Harden Normals option destabilizes Blender #60304

Closed
opened 2019-01-08 05:22:26 +01:00 by Manfred Giebler · 7 comments

System Information
Operating system: Windows 10 64bit
Graphics card: Nvidia GeForce GTX 1070

Blender Version
Broken: version: 2.80 (sub 40), branch: blender2.7, commit date: 2019-01-07 23:37, hash: 91a155833e, type: Release

Short description of error
Bevel modifier's Harden Normals option destabilizes Blender if Auto Smooth option is disabled

Exact steps for others to reproduce the error

  • Launch Blender with default scene.
  • Add Bevel modifier to default cube.

Enable "Harden Normals" on Bevel modifier properties panel.

At this point, any of the following actions will crash Blender:

  • Move, rotate or scale the cube.
  • Switch the cube into Edit mode.
  • Enable "Auto Smooth" on the cube's mesh properties panel.
  • Disable "Harden Normals".

If Auto Smooth is enabled prior to Harden Normals, Blender remains stable. However, if Auto Smooth is disabled while Harden Normals is still enabled, Blender will crash.system-info.txt

**System Information** Operating system: Windows 10 64bit Graphics card: Nvidia GeForce GTX 1070 **Blender Version** Broken: version: 2.80 (sub 40), branch: blender2.7, commit date: 2019-01-07 23:37, hash: 91a155833e59, type: Release **Short description of error** Bevel modifier's Harden Normals option destabilizes Blender if Auto Smooth option is disabled **Exact steps for others to reproduce the error** - Launch Blender with default scene. - Add Bevel modifier to default cube. # Enable "Harden Normals" on Bevel modifier properties panel. At this point, any of the following actions will crash Blender: - Move, rotate or scale the cube. - Switch the cube into Edit mode. - Enable "Auto Smooth" on the cube's mesh properties panel. - Disable "Harden Normals". If Auto Smooth is enabled prior to Harden Normals, Blender remains stable. However, if Auto Smooth is disabled while Harden Normals is still enabled, Blender will crash.[system-info.txt](https://archive.blender.org/developer/F6216382/system-info.txt)

Added subscriber: @mgiebler

Added subscriber: @mgiebler
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Probably related to #60301.

Probably related to #60301.
Member

Added subscriber: @howardt

Added subscriber: @howardt

Added subscriber: @JasonClarke

Added subscriber: @JasonClarke

This issue was referenced by ec3e2b0ce5

This issue was referenced by ec3e2b0ce5a056ca53c37a07d24d86e31f4d2e97
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60304
No description provided.