Fix T60304, T60301: setting error message in bevel modifier results in double free